--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -35,4 +35,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ${{ matrix.os }}-binary
-          path: target/${{ matrix.target }}/debug/my_project
+          path: target/${{ matrix.target }}/debug/
